add html templates to better visualization of data

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -11,20 +11,24 @@
   </head>
   <body>
     <h1>Forecasted METAR conditions for Costa Rican's Airports</h1>
-    <h3>Available stations:</h3>
-    <ul>
-      <li>
-        <a target="_blank" href="http://127.0.0.1:8000/mroc.txt">MROC</a>
-      </li>
-      <li>
-        <a target="_blank" href="http://127.0.0.1:8000/mrpv.txt">MRPV</a>
-      </li>
-      <li>
-        <a target="_blank" href="http://127.0.0.1:8000/mrlb.txt">MRLB</a>
-      </li>
-      <li>
-        <a target="_blank" href="http://127.0.0.1:8000/mrlm.txt">MRLM</a>
-      </li>
-    </ul>
+    <h2>Available stations:</h2>
+    <table class="center">
+      {% for stn in stations %}
+      <tr>
+        <th>
+          <p>{{ stn.name }} ({{ stn.icao | upper }})</p>
+        </th>
+        <td>
+          <a class="btn" target="_blank" href="http://127.0.0.1:8000/forecast/{{ stn.icao }}">PRETTY</a>
+        </td>
+        <td>
+          <a class="btn" target="_blank" href="http://127.0.0.1:8000/{{ stn.icao }}.json">JSON</a>
+        </td>
+        <td>
+          <a class="btn" target="_blank" href="http://127.0.0.1:8000/{{ stn.icao }}.txt">TXT</a>
+        </td>
+      </tr>
+    {% endfor %}
+    </table>
   </body>
 </html>
