--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,60 @@
-h1 {
-  color: blue;
+body {
+  font-family:  Verdana, Geneva, Tahoma, sans-serif;
+  margin: 2rem;
+}
+
+p {
+  margin: 0.2rem;
+  padding: 0.2rem;
+  font-size: large;
+  display: inline-block;
+}
+
+.center {
+  margin: 0 auto;
+}
+
+.btn {
+  background-color: #4CAF50; /* Green */
+  border: white 5px;
+  border-radius: 5px;
+  color: white;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+tr {
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+tr.bg-grey {
+  background-color: rgb(177, 173, 173);
+}
+
+th.forecast {
+  background-color: #4CAF50; /* Green */
+  color: white;
+  border: white 5px;
+  border-radius: 5px;
+  padding: 1.5rem;
+  margin: 1rem;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+td.forecast {
+  border: rgb(177, 173, 173) 2px solid;
+  border-radius: 5px;
+  padding: 0.2rem;
+  margin: 0.5rem;
+  text-align: center;
+  text-decoration: none;
+  font-size: 12px;
 }
